# U-VIP-SLAM

./: CMakeLists.txt  ExampleGroovyOrNewer_aqualoc.launch  README.md  README.txt  debug.txt
Data/: Settings.yaml  Settings_OV.yaml  Settings_UWVO.yaml  Settings_VIORB.yaml  Settings_VI_Aqualoc_archiological.yaml  Settings_VI_Aqualoc_harbor.yaml  Settings_aqualoc_archi.yaml  Settings_aqualoc_harbor.yaml  euroc.yaml  rviz.rviz  rviz.vcg
Data/EuroC/: V1_3.yaml  V2_2.yaml  V2_3.yaml
include/: Converter.h  FrameKTL.h  FramePublisher.h  Grider_DOG.h  Grider_FAST.h  Grider_HARRIS.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  MapPublisher.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  Tracking.h  cluster.h
launch/: ORB.launch
src/: Converter.cc  FrameKTL.cc  FramePublisher.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  MapPublisher.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  Tracking.cc  cluster.cpp  hash.cpp  main.cc
src/IMU/: IMUPreintegrator.cpp  IMUPreintegrator.h  NavState.cpp  NavState.h  configparam.cpp  configparam.h  g2otypes.cpp  g2otypes.h  imudata.cpp  imudata.h
